--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,8 @@
 <section>
   <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <p>When machine learning meets system.</p>
+  <p>新浪微博: <a href="http://weibo.com/yinxusen">@yinxusen</a><br/>
+     LinkedIn: <a href="http://www.linkedin.com/in/xusenyin">Xusen Yin</a><br/>
+     Github: <a href="https://github.com/yinxusen">@yinxusen</a>
+  </p>
 </section>
